--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!Document html>
+<html>
+	<head>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<title>web page</title>
+	</head>
+	<body>
+		<h1>Welcome</h1>
+		<div class="first"></div>
+	</body>
+</html>
