--- a/index.html
+++ b/index.html
@@ -1,11 +1,188 @@
-<!Document html>
+<!DOCTYPE html>
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<title>web page</title>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<title></title>
 	</head>
 	<body>
-		<h1>Welcome</h1>
-		<div class="first"></div>
+	<div id="header">
+		<div class="container">
+			<img src="/home/manish/Downloads/projects-html and Css/shutterburg pro1/resume/images/img.jpg"/>
+			<h1>RIYA KHANDELWAL</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="left col-sm-6">
+			<h2>Education</h2>
+			<ul class="resume-box">
+				<li>
+					<div class="year" style="height: 90px;">
+						<div>
+							<h4>2014-2015</h4>
+							<span>PG-DAC</span>
+						</div>
+					</div>
+					<div class="box-content" style="height: 90px;">
+						<div>
+							<h4>C-DAC</h4>
+							<span>Aggregate percent: 72%</span>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="year" style="height: 90px;">
+						<div>
+							<h4>2010-2014</h4>
+							<span>B.Tech(CSE)</span>
+						</div>
+					</div>
+					<div class="box-content" style="height: 90px;">
+						<div>
+							<h4>Rajasthan Technical University</h4>
+							<span>Aggregate percent: 76%</span>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="year" style="height: 90px;">
+						<div>
+							<h4>2009-2010</h4>
+							<span>Senior Secondary</span>
+						</div>
+					</div>
+					<div class="box-content" style="height: 90px;">
+						<div>
+							<h4>RBSE</h4>
+							<span>Aggregate percent: 82%</span>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="year" style="height: 90px;">
+						<div>
+							<h4>2007-2008</h4>
+							<span>Secondary</span>
+						</div>
+					</div>
+					<div class="box-content" style="height: 90px;">
+						<div>
+							<h4>RBSE</h4>
+							<span>Aggregate percent: 84%</span>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="right col-sm-6">
+			<div class="black-layer">
+				<h2 style=" margin-bottom: 0px; padding-bottom: 5px;color: white;border-bottom: thin solid white;padding-right: 15px;">Skills</h2>
+				<div class="tablediv">
+					<table  align="center" style="margin:0px auto; border-spacing: 30px;">
+						<tr>
+							<td style="padding: 0;height: 50px;width: 100px;">
+         						<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"> <h3 style="color: white;">HTML</h3></div></td>
+							<td style="padding: 0;height: 50px;width: 100px;">
+								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">CSS</h3></div>
+							</td>	
+						</tr>
+						<tr>
+							<td style="padding: 0;height: 50px;width: 110px;">
+								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">JavaScript</h3></div>
+							</td>
+							<td style="padding: 0;height: 50px;width: 100px;">
+								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">JQuery</h3></div>
+							</td>
+						</tr>
+						<tr>
+							<td style="padding: 0;height: 50px;width: 100px;">
+								<div style="height:100%; width:100%;position:relative; text-align: center; border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">Java</h3></div>
+							</td>
+							<td style="padding: 0;height: 50px;width: 100px;">
+								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">Hibernate</h3></div>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="2" style="padding: 0;height: 50px;width: 100px;">
+								<div style="height:100%; width:100%;position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white">SQL</h3></div>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="expleft col-sm-6">
+			<div class="whitelayer">
+				<h2 class="headingsty">Projects</h2>
+				<ul class="projbox">
+					<li>
+						<div class="protitle" style="height:124px;">
+							<div><h3><i>Box-Office Booking</i></h3></div>
+						</div>
+						<div class="prodes" style="height:124px;">
+							<div>
+								<p>Developed a platform where users can book movie tickets
+online. We developed this project in PHP ,HTML, CSS and MySql.</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="protitle" style="height:124px;">
+							<div><h3><i>Recycle India</i></h3></div>
+						</div>
+						<div class="prodes" style="height:124px;">
+							<div>
+								<p>Aim of this project was to provide information and solutions towards a
+cleaner and zero waste environments. RECYCLE INDIA is a web-based application
+developed in JAVA language and MYSQL as database.</p>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="protitle" style="height:128px;">
+							<div><h3><i>E-Saadhya</i></h3></div>
+						</div>
+						<div class="prodes" style="height:128px;">
+							<div>
+								<p>E-Saadhya-IEP project helps to teach the autistic children. In this project
+the tutor can register information of students and set annual goals, short term goals
+and subtasks for each student. Tutor can also generate annual reports for the students
+and provide rating for the module. We used J2EE platform to develop this.</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="expright col-sm-6">
+			<h2>Work Experience</h2>
+			<div>
+				<p style="font-family: sans-serif;font-size: 23px; font-variant: normal;line-height: 1.3;color:rgba(0,0,0,0.9);"> Faculty at C-DAC ATC NETCOM, Jaipur  (Aug'15 - Dec'15)</p>
+				<ul>
+					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);margin-bottom: 10px;">Trained students in SQL and Core Java</li>
+					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);line-height: 1.3;margin-bottom: 50px;">Handled a batch of students with mixed backgrounds like B.Tech., BCA,
+MCA, M.Tech. etc.</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Get In Touch</h2>
+				<ul class="info">
+					<li>
+						<i class="fa fa-envelope">
+							&#x25DB;
+						</i>
+						<span>rkhandelwal2793@gmail.com</span>
+					</li>
+					<li>
+						<i class="fa fa-phone">
+							&#x260F;
+						</i>
+						<span> +91-7568515523</span>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	</body>
 </html>
