--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 	<div id="header">
 		<div class="container">
-			<img src="/home/manish/Downloads/projects-html and Css/shutterburg pro1/resume/images/img.jpg"/>
+			<img src="images/img.jpg"/>
 			<h1>RIYA KHANDELWAL</h1>
 		</div>
 	</div>
