--- a/todolist/index.html
+++ b/todolist/index.html
@@ -1,19 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-    	<meta charset="UTF-8">
-    	<title>To Do</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
-	</head>
-	<body>
-		<h2>To Do</h2>
-		<form name="checkListForm">
-			<input type="text" name="checkListItem"/>
-		</form>
-		<div id="button">Add!</div>
-		<br/>
-		<div class="list"></div>
-	</body>
+  <head>
+    <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='stylesheet.css'/>
+  </head>
+  <body>
+    <div class="header">
+      <h1>To-Do List</h1>
+    </div>
+    <div class="main">
+      <div class="list">
+        <p>
+          <input type="checkbox">
+          <i class="glyphicon glyphicon-star"></i>
+          <span>Cleaning</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p>
+        <p>
+          <input type="checkbox">
+          <i class="glyphicon glyphicon-star"></i>
+          <span>Study</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p>
+        <p>
+          <input type="checkbox">
+          <i class="glyphicon glyphicon-star"></i>
+          <span>Cooking</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p>
+       <!-- <p>
+          <input type="checkbox" checked>
+          <i class="glyphicon glyphicon-star"></i>
+          <span>Strawberries</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p>
+         <p>
+          <input type="checkbox">
+          <i class="glyphicon glyphicon-star"></i>
+          <span>Chocolate Mousse</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p>
+        <p>
+          <input type="checkbox">
+          <i class="glyphicon glyphicon-star active"></i>
+          <span>Figs</span>
+          <i class="glyphicon glyphicon-remove"></i>
+        </p> -->
+      </div>
+      
+      <form class="form">
+        <div class="form-container">
+          <input id="todo" type="text" class="form-input" placeholder="Add item">
+        </div>
+        <button type="submit" class="btn">+</button>
+      </form>
+    </div>
+    
+    <script src="https://s3.amazonaws.com/codecademy-content/projects/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/1.4.0/annyang.min.js"></script>
+    <script src='script.js'></script>
+</body>
 </html>
