--- a/index.html
+++ b/index.html
@@ -117,41 +117,74 @@
 				<h2 class="headingsty">Projects</h2>
 				<ul class="projbox">
 					<li>
-						<div class="protitle" style="height:124px;">
-							<div><h3><i>Box-Office Booking</i></h3></div>
+						<div class="protitle" style="height:50px;">
+							<div><h4><i>Tic-Tac Clock<i></h4></div>
 						</div>
-						<div class="prodes" style="height:124px;">
+						<div class="prodes" style="height:50px;">
+							<div><p>Developed using Html, css and java script<br/>
+							<a href="http://khandelwalriya.github.io/timeclock/index.html">Tic-Tac clock</a> 								</p></div>
+						</div>
+					</li>
+					<li>
+						<div class="protitle" style="height:50px;">
+							<div><h4><i>Comment Box<i></h4></div>
+						</div>
+						<div class="prodes" style="height:50px;">
+							<div><p>Developed using Html, css, java script and jquery<br/>
+							<a href="http://khandelwalriya.github.io/comment_box/index.html">Comment Box</a> 								</p></div>
+						</div>
+					</li>
+					<li>
+						<div class="protitle" style="height:50px;">
+							<div><h4><i>To-Do List<i></h4></div>
+						</div>
+						<div class="prodes" style="height:50px;">
+							<div><p>Developed using Html, css and java script to manage tasks<br/>
+							<a href="http://khandelwalriya.github.io/todolist/index.html">To-Do List</a> 								</p></div>
+						</div>
+					</li>
+					<li>
+						<div class="protitle" style="height:85px;">
+							<div><h4><i>SpreadSheet display<i></h4></div>
+						</div>
+						<div class="prodes" style="height:90px;">
+							<div><p>It's a dummy project to know about how to retrieve data from google spreadsheet and display it in the browser.Developed using Html, css and java script and knockout js<br/>
+							<a href="http://khandelwalriya.github.io/spreadsheeet_example/index.html">Spreadsheet Display</a> 								</p></div>
+						</div>
+					</li>
+				<li style="margin-top:-10px;">
+						<div class="protitle" style="height:35px;">
+							<div><h4 style="margin-top:-5px;"><i>Meme generator<i></h4></div>
+						</div>
+						<div class="prodes" style="height:35px;">
+							<div><p>
+							<a href="http://khandelwalriya.github.io/meme_generator/index.html">meme_generator</a> 								</p></div>
+						</div>
+					</li>
+				<li>
+						<div class="protitle" style="height:80px;">
+							<div><h4><i>E-Saadhya</i></h4></div>
+						</div>
+						<div class="prodes" style="height:95px;">
 							<div>
-								<p>Developed a platform where users can book movie tickets
+								<p>E-Saadhya-IEP project helps to teach the autistic children. In this project
+the tutor can register information of students and set annual goals, short term goals
+and subtasks for each student.We used J2EE platform to develop this.</p>
+							</div>
+						</div>
+					</li>
+	<li style="margin-top:-10px;">
+						<div class="protitle" style="height:50px;">
+							<div><h4 style="margin-top:-3px;"><i>Box-office Booking</i></h4></div>
+						</div>
+						<div class="prodes" style="height:50px;">
+							<div>
+								<p>Developed a platform where users can book movie tickets 
 online. We developed this project in PHP ,HTML, CSS and MySql.</p>
 							</div>
 						</div>
 					</li>
-					<li>
-						<div class="protitle" style="height:124px;">
-							<div><h3><i>Recycle India</i></h3></div>
-						</div>
-						<div class="prodes" style="height:124px;">
-							<div>
-								<p>Aim of this project was to provide information and solutions towards a
-cleaner and zero waste environments. RECYCLE INDIA is a web-based application
-developed in JAVA language and MYSQL as database.</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="protitle" style="height:128px;">
-							<div><h3><i>E-Saadhya</i></h3></div>
-						</div>
-						<div class="prodes" style="height:128px;">
-							<div>
-								<p>E-Saadhya-IEP project helps to teach the autistic children. In this project
-the tutor can register information of students and set annual goals, short term goals
-and subtasks for each student. Tutor can also generate annual reports for the students
-and provide rating for the module. We used J2EE platform to develop this.</p>
-							</div>
-						</div>
-					</li>
+
 				</ul>
 			</div>
 		</div>
