--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 						</tr>
 						<tr>
 							<td style="padding: 0;height: 50px;width: 100px;">
-								<div style="height:100%; width:100%;position:relative; text-align: center; border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">Java</h3></div>
+								<div style="height:100%; width:100%;position:relative; text-align: center; border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">Core Java</h3></div>
 							</td>
 							<td style="padding: 0;height: 50px;width: 100px;">
-								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">Hibernate</h3></div>
+								<div style="height:100%; width:100%; position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white;">SQL</h3></div>
 							</td>
 						</tr>
 						<tr>
 							<td colspan="2" style="padding: 0;height: 50px;width: 100px;">
-								<div style="height:100%; width:100%;position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white">SQL</h3></div>
+								<div style="height:100%; width:100%;position:relative; text-align: center;border-radius: 100px;border: 1px solid white;"><h3 style="color: white">Angular JS1</h3></div>
 							</td>
 						</tr>
 					</table>
@@ -197,25 +197,28 @@ online. We developed this project in PHP ,HTML, CSS and MySql.</p>
 					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);line-height: 1.3;margin-bottom: 50px;">Handled a batch of students with mixed backgrounds like B.Tech., BCA,
 MCA, M.Tech. etc.</li>
 				</ul>
-			</div>
-			<div>
-				<h2>Get In Touch</h2>
-				<ul class="info">
-					<li>
-						<i class="fa fa-envelope">
-							&#x25DB;
-						</i>
-						<span>rkhandelwal2793@gmail.com</span>
-					</li>
-					<li>
-						<i class="fa fa-phone">
-							&#x260F;
-						</i>
-						<span> +91-7568515523</span>
-					</li>
+				<p style="font-family: sans-serif;font-size: 23px; font-variant: normal;line-height: 1.3;color:rgba(0,0,0,0.9);"> UI Developer at Let's Service Automotive Technologies Pvt Ltd, Bangalore  (Apr'16 - Oct'16)</p>
+				<ul>
+					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);margin-bottom: 10px;">Design and develop dynamic and interactive website that ensured Customer/user Friendliness</li>
+					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);line-height: 1.3;margin-bottom: 10px;">Evaluate code to ensure that it is valid, is properly structured, meets industry standards and is compatible with browsers, devices, or operating systems</li>
+					<li style="list-style-type: circle;font-size: 16px;color: rgba(0,0,0,0.9);line-height: 1.3;margin-bottom: 10px;">Handle hybrid mobile application development.</li>
 				</ul>
 			</div>
+			
 		</div>
-	</div>
+	</div><hr/>
+	<div class="left col-sm-12" style="width:90%;">
+		<center><h2 style="margin-top:-30px;padding-bottom:10px;margin-bottom:10px;">Get In Touch</h2>
+		<ul class="info">
+			<li>
+				<i class="fa fa-envelope">&#x25DB;</i>
+				<span>rkhandelwal2793@gmail.com</span>
+			</li>
+			<li>
+				<i class="fa fa-phone">&#x260F;</i>
+				<span> +91-7760743615</span>
+			</li>
+		</ul></center>
+	</div> 
 	</body>
 </html>
